# capp

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  capp  capp-installer-template  deploy  deploy.cast  get_deploy_keys  project_version  pyproject.toml  testindocker  undeploy  undeploy.cast  verify_dca.py
.gitlab/: build-ci.yml  linter-ci.yml  make_new_release  publish-ci.yml  security-ci.yml  tag-ci.yml
_CHANGELOGS/Added/: QE-589_per_environment_configuration_resource.md  QE-709_allow_to_have_a_private_internal_prometheus_endpoint_for_some_containers.md  allow_to_show_priviledged_public_keys_on_listing.md  capp_script_typed.md  compose-systemd_merged_in_the_repo.md  example_app.md  network_diagram.md  support_tar_extractall_parameters_for_python_312.md  uv_ruff_mypy.md
_CHANGELOGS/Changed/: Added_allow_the_reload_command_and_deploy_a_bit_faster.md  certbot_companion.md  certificates_and_vhost_files_are_now_in_named_vol.md  composesystemd_upgraded_to_162.md  detect_error_on_system_service_reload_and_restart_it_instead.md  dockergen_upgraded_to_version_0146.md  ensure_env_and_app_regex_are_valid.md  modern_dca_compose_file.md  new-compose-systemd-version.md  nohttps_should_just_comment_out_the_https_section_instead_of_delete_it.md  panubo_sshd_upgraded_to_version_190_hosted_on_qua.md  proxy_services_updated.md  scripts_and_configs_moved.md  update_composesystemd_to_v170.md  use_fdn_dns_to_prevent_any_surprise.md  use_ssh_confd_directory.md
_CHANGELOGS/Fixed/: acme_challenge_config_is_done_within_le_container.md  docker-gen_upgraded_to_version_0147.md  fix_ci_tagging.md  fix_delete_dunder_method_of_capp.md  fix_listing_priviledged_public_keys.md  fix_old_config_removal.md  fix_old_docker_compose_python_command.md  fix_permissions_for_certficates_keys.md  hook_chaining_failed.md  security_updates_for_docker_gen.md  vhost_specific_app_server_or_app_location_should_be_deleted_if_non_existant_in_current_dca.md
confs/: compose.sudoers  compose@.service  deploy.sudoers  sshd-deploy.conf
dca/: README.md  dca_keys_entrypoint  docker-compose.yml
docker-gen/: .gitignore  build  security-updates
install/: capp-installer
proxy/: .env  docker-compose.yml  docker-gen-wrapper  get-nginx-tmpl
proxy/le/: Dockerfile
proxy/nginx/: Dockerfile
scripts/: capp  capp-installer  compose-systemd  deploy-capp  get_deploy_keys  wait-for-cpu-idle
test/: .gitignore  Dockerfile  docker-entrypoint  myapp--prod.dca  myapp--prod.dca.sha256  testindocker
test/myapp/: metadata
test/myapp/context/: docker-compose.yml
test/myapp/context/web/: Dockerfile
test/myapp/context/www/: index.html
